---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (VarPointsTo "o1" (Class "A")))
(let prop0 (= t0 t0))
(let t1 (New "o1" (Class "A")))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
    (premises (Fiat (= t1 t1)))
    (substitution (a "o1") (x t1) (b (Class "A"))))
  (Fiat (= (Class "A") (Class "A")))
  1)
(let t0 (VarPointsTo "o2" (Class "B")))
(let prop0 (= t0 t0))
(let t1 (New "o2" (Class "B")))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
    (premises (Fiat (= t1 t1)))
    (substitution (a "o2") (x t1) (b (Class "B"))))
  (Fiat (= (Class "B") (Class "B")))
  1)
(let t0 (VarPointsTo "o3" (Class "B")))
(let prop0 (= t0 t0))
(let t1 (VarPointsTo "o2" (Class "B")))
(let t2 (New "o2" (Class "B")))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((= x (Assign v1 v2))
       (VarPointsTo v2 c2))
      ((VarPointsTo v1 c2))
         )")
    (premises
      (Fiat (= (Assign "o3" "o2") (Assign "o3" "o2")))
      (Rule
        (= t1 t1)
        (name
          "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
        (premises (Fiat (= t2 t2)))
        (substitution (a "o2") (x t2) (b (Class "B")))))
    (substitution (v1 "o3") (c2 (Class "B")) (v2 "o2") (x (Assign "o3" "o2"))))
  (Fiat (= (Class "B") (Class "B")))
  1)
(let t0 (HeapPointsTo (Class "B") (Field "f") (Class "A")))
(let prop0 (= t0 t0))
(let t1 (Store "o2" (Field "f") "o1"))
(let t2 (VarPointsTo "o2" (Class "B")))
(let t3 (New "o2" (Class "B")))
(let t4 (VarPointsTo "o1" (Class "A")))
(let t5 (New "o1" (Class "A")))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((= x (Store v1 f v2))
       (VarPointsTo v1 c1)
       (VarPointsTo v2 c2))
      ((HeapPointsTo c1 f c2))
         )")
    (premises
      (Fiat (= t1 t1))
      (Rule
        (= t2 t2)
        (name
          "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
        (premises (Fiat (= t3 t3)))
        (substitution (a "o2") (x t3) (b (Class "B"))))
      (Rule
        (= t4 t4)
        (name
          "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
        (premises (Fiat (= t5 t5)))
        (substitution (a "o1") (x t5) (b (Class "A")))))
    (substitution
      (v2 "o1")
      (c1 (Class "B"))
      (c2 (Class "A"))
      (f (Field "f"))
      (x t1)
      (v1 "o2")))
  (Fiat (= (Class "A") (Class "A")))
  2)
(let t0 (VarPointsTo "r" (Class "A")))
(let prop0 (= t0 t0))
(let t1 (Load "r" "o3" (Field "f")))
(let t2 (VarPointsTo "o3" (Class "B")))
(let t3 (VarPointsTo "o2" (Class "B")))
(let t4 (New "o2" (Class "B")))
(let prf0
  (Rule
              (= t3 t3)
              (name
                "(rule ((= x (New a b)))
        ((VarPointsTo a b))
           )")
              (premises (Fiat (= t4 t4)))
              (substitution (a "o2") (x t4) (b (Class "B")))))
(let t5 (HeapPointsTo (Class "B") (Field "f") (Class "A")))
(let t6 (Store "o2" (Field "f") "o1"))
(let t7 (VarPointsTo "o1" (Class "A")))
(let t8 (New "o1" (Class "A")))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((= x (Load v1 v2 f))
       (VarPointsTo v2 c1)
       (HeapPointsTo c1 f c2))
      ((VarPointsTo v1 c2))
         )")
    (premises
      (Fiat (= t1 t1))
      (Rule
        (= t2 t2)
        (name
          "(rule ((= x (Assign v1 v2))
       (VarPointsTo v2 c2))
      ((VarPointsTo v1 c2))
         )")
        (premises (Fiat (= (Assign "o3" "o2") (Assign "o3" "o2"))) prf0)
        (substitution
          (v1 "o3")
          (c2 (Class "B"))
          (v2 "o2")
          (x (Assign "o3" "o2"))))
      (Rule
        (= t5 t5)
        (name
          "(rule ((= x (Store v1 f v2))
       (VarPointsTo v1 c1)
       (VarPointsTo v2 c2))
      ((HeapPointsTo c1 f c2))
         )")
        (premises
          (Fiat (= t6 t6))
          prf0
          (Rule
            (= t7 t7)
            (name
              "(rule ((= x (New a b)))
      ((VarPointsTo a b))
         )")
            (premises (Fiat (= t8 t8)))
            (substitution (a "o1") (x t8) (b (Class "A")))))
        (substitution
          (v2 "o1")
          (c1 (Class "B"))
          (c2 (Class "A"))
          (f (Field "f"))
          (x t6)
          (v1 "o2"))))
    (substitution
      (v1 "r")
      (c1 (Class "B"))
      (c2 (Class "A"))
      (f (Field "f"))
      (v2 "o3")
      (x t1)))
  (Fiat (= (Class "A") (Class "A")))
  1)
Assign: 1
Class: 2
Field: 1
HeapPointsTo: 1
Load: 1
New: 2
Store: 1
VarPointsTo: 4
